--- a/_config.yml
+++ b/_config.yml
@@ -12,11 +12,12 @@ email: "zoomquiet+rn@gmail.com"
 authors: 
     readn:
         name: Reading Neighbuor
-        display_name: 阅读邻居
+        display_name: 阅邻
         gravatar: e2fbbb298320f9d9c4398210cf5c25b5
-        email: zoomquiet+rn@gmail.com
+        email: support@yuedulinju.com
         web: http://yuedulinju.com/about.html
         github: ZoomQuiet
+        gittip: https://www.gittip.com/ZoomQuiet/
     zoomq:
         name: Zoom Quiet
         display_name: Zoom.Quiet
@@ -24,6 +25,7 @@ authors:
         email: i@zoomquiet.io
         web: http://devrel.info/2014-02/ac0-zq/
         github: ZoomQuiet
+        gittip: https://www.gittip.com/ZoomQuiet/
 
 exclude:
   - README.md
