--- a/_config.yml
+++ b/_config.yml
@@ -1,11 +1,15 @@
 root: /
 permalink: /:year-:month/:title/
 markdown: kramdown
-pygments: true
 
 markdown_ext:  markdown,md
 
 paginate: 3
+paginate_path: '/page:num'
+
+gems:
+  - jekyll-archives
+  - jekyll-paginate
 
 title: 阅读邻居
 email: "zoomquiet+rn@gmail.com"
